--- a/app/src/main/res/layout/activity_barcode_screen.xml
+++ b/app/src/main/res/layout/activity_barcode_screen.xml
@@ -12,20 +12,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <AutoCompleteTextView
             android:id="@+id/roomEditText"
-            android:layout_width="264dp"
-            android:layout_height="51dp"
-            android:layout_marginTop="56dp"
+            android:layout_width="331dp"
+            android:layout_height="42dp"
+            android:layout_marginTop="68dp"
             android:background="@null"
             android:ems="10"
             android:hint="Enter Room Number"
             android:inputType="text"
-            android:textColor="@color/black"
-            android:textColorLink="@color/black"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textColorLink="@color/white"
+            android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.238"
+            app:layout_constraintHorizontal_bias="0.562"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,9 +34,9 @@
             android:id="@+id/imageView13"
             android:layout_width="340dp"
             android:layout_height="54dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="56dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
+            app:layout_constraintHorizontal_bias="0.507"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/input_border"
@@ -63,12 +64,13 @@
             android:layout_marginBottom="4dp"
             android:background="@null"
             android:hint="Enter Bag Tag"
-            android:textColor="@color/black"
-            android:textColorLink="@color/black"
+            android:textColor="@color/white"
+            android:textColorLink="@color/white"
+            android:textColorHint="@color/white"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView14"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.475"
+            app:layout_constraintHorizontal_bias="0.65"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/white_input"
             tools:ignore="UnknownIdInLayout" />
@@ -106,7 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="12dp"
-            android:text="Bags In This Room"
+            android:text="Bags In Room"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/view01"
