--- a/app/src/main/res/layout/activity_room_history_screen.xml
+++ b/app/src/main/res/layout/activity_room_history_screen.xml
@@ -1,56 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="@drawable/backgroundpic"
-tools:context=".RoomHistoryScreen">
-
-<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/backgroundpic"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".RoomHistoryScreen"
+    android:padding="16dp">
 
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+
+    <!--    to display the room number-->
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/roomTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:text="Room History"
         android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:text="Room History"
         android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/view01"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="20dp" />
+        android:textStyle="bold"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"/>
 
+    <!--    to add the divider view line-->
     <View
-        android:id="@+id/view01"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginStart="20dp"
+        android:layout_height="1dp"
+        android:layout_below="@id/roomTextView"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
-        android:background="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView3" />
+        android:background="@android:color/darker_gray"/>
 
+    <!--    to add a recyclerView to display all the bagtags-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tagRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="60dp"
-        android:padding="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-
-        app:layout_constraintTop_toBottomOf="@id/view01"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@id/divider"
+        android:layout_marginTop="8dp"/>
 
 </RelativeLayout>
+
+
+
+
+
+
