--- a/app/src/main/res/layout/activity_barcode_screen.xml
+++ b/app/src/main/res/layout/activity_barcode_screen.xml
@@ -9,14 +9,14 @@
     android:background="@drawable/barcodebackground"
     tools:context=".BarcodeScreen">
 
+    <!-- Navigation View for Drawer -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <!-- Toolbar for Navigation Drawer -->
-        <include
-            layout="@layout/toolbar" />
+        <include layout="@layout/toolbar" />
 
         <!-- Fragment container if needed -->
         <FrameLayout
@@ -90,8 +90,8 @@
                     android:background="@null"
                     android:hint="Enter Bag Tag"
                     android:textColor="@color/white"
-                    android:textColorLink="@color/white"
                     android:textColorHint="@color/white"
+                    android:textColorLink="@color/white"
                     android:textSize="20dp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -166,14 +166,14 @@
                     app:layout_constraintTop_toBottomOf="@+id/imageView14"
                     tools:ignore="MissingConstraints" />
 
-<!--                <Button-->
-<!--                    android:id="@+id/roomButton"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="Room history"-->
-<!--                    tools:ignore="MissingConstraints"-->
-<!--                    tools:layout_editor_absoluteX="139dp"-->
-<!--                    tools:layout_editor_absoluteY="8dp" />-->
+                <!--                <Button-->
+                <!--                    android:id="@+id/roomButton"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:text="Room history"-->
+                <!--                    tools:ignore="MissingConstraints"-->
+                <!--                    tools:layout_editor_absoluteX="139dp"-->
+                <!--                    tools:layout_editor_absoluteY="8dp" />-->
 
                 <!-- Existing elements like AutoCompleteTextView, EditText, RecyclerView, etc. -->
 
@@ -182,7 +182,6 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <!-- Navigation View for Drawer -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
