--- a/app/src/main/res/layout/activity_barcode_screen.xml
+++ b/app/src/main/res/layout/activity_barcode_screen.xml
@@ -40,7 +40,7 @@
                     android:id="@+id/roomEditText"
                     android:layout_width="331dp"
                     android:layout_height="42dp"
-                    android:layout_marginTop="68dp"
+                    android:layout_marginTop="30dp"
                     android:background="@null"
                     android:ems="10"
                     android:hint="Enter Room Number"
@@ -59,7 +59,7 @@
                     android:id="@+id/imageView13"
                     android:layout_width="340dp"
                     android:layout_height="54dp"
-                    android:layout_marginTop="56dp"
+                    android:layout_marginTop="25dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.507"
                     app:layout_constraintStart_toStartOf="parent"
@@ -141,13 +141,12 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/tagRecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_width="347dp"
+                    android:layout_height="333dp"
                     android:layout_marginTop="16dp"
                     android:padding="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view01"
                     app:layout_constraintVertical_bias="0.0"
