--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -19,12 +19,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="textStart"
-        android:text="@string/user"
         android:textColor="@color/white"
+        android:text="ABC"
         android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/staff_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/flightNo"
