organising the structure of the kotlin project

--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/bag_tag"
     android:layout_height="match_parent"
-    tools:context=".ActivityDrawer">
+    tools:context=".ui.main.ActivityDrawer">
 
     <FrameLayout
         android:id="@+id/content_frame"
