--- a/app/src/main/res/layout/room_item.xml
+++ b/app/src/main/res/layout/room_item.xml
@@ -8,50 +8,56 @@ app:cardElevation="4dp"
 android:layout_margin="4dp"
 app:cardCornerRadius="8dp">
 
-<LinearLayout
-    android:id="@+id/view_foreground"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center_vertical"
-    android:layout_margin="4dp"
-    android:background="@color/white"
-    android:orientation="horizontal"
-    android:visibility="visible">
-
-    <ImageView
-        android:id="@+id/iconImageView1"
-        android:layout_width="50dp"
-        android:layout_height="match_parent"
-        android:src="@drawable/baseline_meeting_room_24" />
-
     <LinearLayout
-        android:layout_width="240dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="10dp"
-        android:orientation="vertical">
+        android:id="@+id/view_foreground"
+        android:layout_width="match_parent"
+        android:layout_height="69dp"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="4dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:visibility="visible">
 
-        <TextView
-            android:id="@+id/roomTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical"
-            android:text="Room 01"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/iconImageView1"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/baseline_meeting_room_24" />
 
-        <TextView
-            android:id="@+id/tagCountTextView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="153dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical|start"
-            android:text="Tag Count"
-            android:textSize="18sp" />
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/roomTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:gravity="center_vertical"
+                android:text="Room 01"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tagCountTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                android:text="Tag Count"
+                android:textSize="18sp" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
 
 </androidx.cardview.widget.CardView>
