--- a/app/src/main/res/layout/backtoolbar.xml
+++ b/app/src/main/res/layout/backtoolbar.xml
@@ -1,13 +1,32 @@
-<androidx.appcompat.widget.Toolbar
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/backtoolbar"
+    android:background="@android:color/transparent"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:background="?attr/colorPrimary"
-    android:contentInsetStartWithNavigation="0dp"
-    android:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
-    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    android:title="Room History"
-    android:titleTextColor="@android:color/white"/>
+    android:layout_height="wrap_content">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="4dp">
+
+        <ImageView
+            android:id="@+id/back_button"
+            android:src="@drawable/baseline_arrow_back_ios_new_24"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </ImageView>
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="47dp"-->
+<!--            android:layout_toEndOf="@+id/back_button"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:text="TOPIC"-->
+<!--            android:textSize="20sp">-->
+
+<!--        </TextView>-->
+    </RelativeLayout>
+</RelativeLayout>
