--- a/app/src/main/res/layout/activity_room_history_screen.xml
+++ b/app/src/main/res/layout/activity_room_history_screen.xml
@@ -10,71 +10,48 @@
     tools:context=".ui.screens.RoomHistoryScreen"
     android:padding="12dp">
 
-<!--    <include layout="@layout/backtoolbar" />-->
 
-    <!--    to display the room number-->
+    <RelativeLayout
+        android:layout_width="388dp"
+        android:layout_height="50dp"
+        android:id="@+id/backbutton">
 
-    <!-- Add a Toolbar for back button support -->
-
-    <!--    to add the divider view line-->
-
-    <!--    to add a recyclerView to display all the bagtags-->
-
-    <TextView
-        android:id="@+id/roomTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="91dp"
-        android:text="Room History"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/transparent"
-        android:elevation="4dp" >
-<!--        app:title="Room History"-->
-<!--        app:titleTextColor="@color/white" >-->
-
-        <ImageView
-            android:id="@+id/backButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/baseline_arrow_back_ios_new_24"
-            android:padding="8dp">
-        </ImageView>
+        <ImageButton
+            android:id="@+id/back_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@color/transparent"
+            android:src="@drawable/baseline_arrow_back_ios_new_24" />
 
         <TextView
+            android:id="@+id/roomTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="52dp"
+            android:layout_toEndOf="@id/back_button"
+            android:gravity="center_horizontal"
             android:text="Room History"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_gravity="center"/>
+            android:textColorHint="@color/white"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-
-    </androidx.appcompat.widget.Toolbar>
+    </RelativeLayout>
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/roomTextView"
-        android:layout_marginTop="22dp"
+        android:layout_below="@id/backbutton"
+        android:layout_marginTop="10dp"
         android:background="@android:color/darker_gray" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tagRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="399dp"
+        android:layout_height="627dp"
         android:layout_below="@id/divider"
-        android:layout_marginTop="2dp"/>
+        android:layout_marginTop="20dp" />
 
 </RelativeLayout>
 
