--- a/app/src/main/res/layout/activity_room_history_screen.xml
+++ b/app/src/main/res/layout/activity_room_history_screen.xml
@@ -13,23 +13,28 @@
 
     <RelativeLayout
         android:layout_width="388dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
+        android:gravity="center_vertical"
         android:id="@+id/backbutton">
 
         <ImageButton
             android:id="@+id/back_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_marginStart="12dp"
+            android:layout_width="20dp"
+            android:layout_height="30dp"
             android:background="@color/transparent"
+            android:layout_centerVertical="true"
             android:src="@drawable/baseline_arrow_back_ios_new_24" />
 
         <TextView
             android:id="@+id/roomTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="52dp"
+            android:layout_marginStart="83dp"
+            android:layout_centerVertical="true"
             android:layout_toEndOf="@id/back_button"
             android:gravity="center_horizontal"
+            android:layout_centerHorizontal="true"
             android:text="Room History"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
@@ -51,7 +56,7 @@
         android:layout_width="399dp"
         android:layout_height="627dp"
         android:layout_below="@id/divider"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="18dp" />
 
 </RelativeLayout>
 
