--- a/app/src/main/res/layout/activity_room_history_screen.xml
+++ b/app/src/main/res/layout/activity_room_history_screen.xml
@@ -30,16 +30,17 @@
             android:id="@+id/roomTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="83dp"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/back_button"
-            android:gravity="center_horizontal"
             android:layout_centerHorizontal="true"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="8dp"
+            android:layout_toEndOf="@id/back_button"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
             android:text="Room History"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textSize="20sp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
     </RelativeLayout>
 
@@ -56,7 +57,7 @@
         android:layout_width="399dp"
         android:layout_height="627dp"
         android:layout_below="@id/divider"
-        android:layout_marginTop="18dp" />
+        android:layout_marginTop="5dp" />
 
 </RelativeLayout>
 
