--- a/app/src/main/res/layout/activity_tag_list.xml
+++ b/app/src/main/res/layout/activity_tag_list.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/backgroundpic"
+    android:id="@+id/tagList"
     android:padding="12dp">
 
 <RelativeLayout
@@ -25,17 +27,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="1dp"
-        android:gravity="center_horizontal"
-        android:layout_toEndOf="@id/back_button"
-        android:layout_marginStart="81dp"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="8dp"
+        android:layout_toEndOf="@id/back_button"
         android:text="Room Number"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textSize="20sp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
 </RelativeLayout>
 
@@ -53,5 +53,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/divider"
-        android:layout_marginTop="18dp" />
+        android:layout_marginTop="5dp" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
 </RelativeLayout>
