--- a/app/src/main/res/layout/room_item.xml
+++ b/app/src/main/res/layout/room_item.xml
@@ -25,7 +25,7 @@ app:cardCornerRadius="8dp">
             android:src="@drawable/baseline_meeting_room_24" />
 
         <LinearLayout
-            android:layout_width="146dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical"
@@ -35,7 +35,7 @@ app:cardCornerRadius="8dp">
                 android:id="@+id/roomTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="2dp"
                 android:gravity="center_vertical"
                 android:text="Room 01"
                 android:textSize="24sp"
